radix-transactions/tests/assets/manifest_parser_error_invalid_argument_2.diag
error: expected a manifest SBOR value or ';' to end an argument list, found ')'
  |
3 |     "lock_fee"
4 | ;
5 | SET_COMPONENT_ROYALTY
6 |     Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
7 |     "method_with_no_package_royalty"
8 |     Enum<0u8>())
  |                ^ expected a manifest SBOR value or ';' to end an argument list
9 | ;
  |